2023-12-17  Akkana Peck  <akkana@shallowsky.com>
	Add new levels=1.5 stage, to not fetch story pages for sites
	that put the entire story in the feed.
	Bump version to 1.1b6.

2023-12-15  Akkana Peck  <akkana@shallowsky.com>
	Refactoring, and rename feedmeparser to pageparser.

2023-12-12  Akkana Peck  <akkana@shallowsky.com>
	More improvement on not showing nonlocal images.

2023-12-05  Akkana Peck  <akkana@shallowsky.com>
	Continuing work on showing something in the index file
	when stories couldn't be fetched.

	urlrss: better local operation (helpful for testing).

2023-07-21  Akkana Peck  <akkana@shallowsky.com>
	Use BeautifulSoup for parsing.

2023-07-20  Akkana Peck  <akkana@shallowsky.com>
	Smarter handling of nonlocal images.
	(Work continues for a few months.)

2023-05-18  Akkana Peck  <akkana@shallowsky.com>
	Add a new config variable, skip_nodes, to skip whole parsed
	nodes and all children.

2023-05-11  Akkana Peck  <akkana@shallowsky.com>
	Show images in index page as well as sub-pages.

2022-11-05  Akkana Peck  <akkana@shallowsky.com>
	Show images in index page as well as sub-pages, if RSS has images.

2022-09-09  Akkana Peck  <akkana@shallowsky.com>
	Various tweaks to handle images from Wordpress plugins
	that don't use img src.

2021-10-07  Akkana Peck  <akkana@shallowsky.com>
	Implement page and feed helpers, including a page helper
	that uses selenium for the New York Times.

2021-06-07  Akkana Peck  <akkana@shallowsky.com>
	New site variable, allow_repeats.

2021-11-11  Akkana Peck  <akkana@shallowsky.com>
	Allow specifying a firefox cookie file, for authenticated sites.
	Add a NY Times site file using the cookie file.

2021-10-26  Akkana Peck  <akkana@shallowsky.com>
	Allow helper files, and add an example that fetches NY Times
	using Selenium.

2021-03-27  Akkana Peck  <akkana@shallowsky.com>
	Allow links in RSS content.

2020-08-11  Akkana Peck  <akkana@shallowsky.com>
	Ensure legal HTML after truncating RSS entries.