@@ -1,4 +1,8 @@
 [CNN]
-url = http://rss.cnn.com/rss/cnn_world.rss
-story_url_rewrite = www.cnn.com/
-    lite.cnn.com/
+
+url = https://lite.cnn.com/
+
+html_index_links = li class="card--lite"
+
+# story_url_rewrite = www.cnn.com/
+#     lite.cnn.com/
